@@ -6,6 +6,9 @@ Mar 20 2003  2.9.1  Various code cleanups and reorganizations
                     Fixed lots of CVS errors of mis-added files
                     Reduced internal packet buffer to 2048.  Minor memory
                      savings.
+                    Migrated drone output to a per-listener ring buffer, fixed
+                     spin condition when listener disconnects inbetween writes,
+                     fixed incomplete drone packet writes.
 Mar 18 2003  2.9.1  Fixed new alert logic, added alert fields to the config
                      file, started moving existing alerts to new alert
                      logic.
